apps/signoz-otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: iresharma
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: signoz/signoz-otel-collector:0.111.24
          command:
            - "--config=/etc/otel-collector-config.yaml"
            - "--feature-gates=-pkg.translator.prometheus.NormalizeName"
          ports:
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
            - name: jaeger-grpc
              containerPort: 14250
            - name: jaeger-thrift
              containerPort: 14268
          readinessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /etc/otel-collector-config.yaml
              subPath: otel-collector-config.yaml
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 384Mi
              cpu: 300m
      volumes:
        - name: config
          configMap:
            name: signoz-otel-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: iresharma
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: jaeger-grpc
      port: 14250
      targetPort: 14250
    - name: jaeger-thrift
      port: 14268
      targetPort: 14268
  type: ClusterIP
