apps/example-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nginx
  namespace: iresharma
  labels:
    app: example-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-nginx
  template:
    metadata:
      labels:
        app: example-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx
  namespace: iresharma
spec:
  selector:
    app: example-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-nginx
  namespace: iresharma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: example.tenant.uttutu.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - example.tenant.uttutu.xyz
      secretName: example-nginx-tls
