apps/lens-distill-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lens-distill
  namespace: iresharma
  labels:
    app: lens-distill
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: lens-distill
  template:
    metadata:
      labels:
        app: lens-distill
    spec:
      containers:
        - name: lens-distill
          image: iresharma/lens-distill:2.3.4
          ports:
            - name: http
              containerPort: 3000
            - name: metrics
              containerPort: 9464
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: lens-distill
  namespace: iresharma
  labels:
    app: lens-distill
spec:
  selector:
    app: lens-distill
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: metrics
      port: 9464
      targetPort: 9464
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lens-distill
  namespace: iresharma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-iresh
spec:
  ingressClassName: traefik
  rules:
    - host: lens-distill.iresharma.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lens-distill
                port:
                  number: 80
  tls:
    - hosts:
        - lens-distill.iresharma.com
      secretName: lens-distill-iresharma-tls
